--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-grid-layout": "^1.3.0",
+    "react-hot-toast": "^2.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.1",
