--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "checkpoint-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mynotes-mda.netlify.app/",
   "dependencies": {
     "@loadable/component": "^5.15.0",
     "@testing-library/jest-dom": "^5.14.1",
